Bug 281927 - Unable de send Invitation using Kmail2/KDE4.7.1
Summary: Unable de send Invitation using Kmail2/KDE4.7.1
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-13 10:31 UTC by Hatem Masmoudi
Modified: 2011-12-20 12:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments
Erro when sending invitation (167.97 KB, image/png)
2011-09-13 10:31 UTC, Hatem Masmoudi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hatem Masmoudi 2011-09-13 10:31:42 UTC
Created attachment 63614 [details]
Erro when sending invitation

Version:           4.7 (using KDE 4.7.1) 
OS:                Linux

Unable de send Invitation using Kmail2/KDE4.7.1 after creating one using korganizer or tasks

Reproducible: Always

Steps to Reproduce:
1- Open Kontact
2- Open Korganizer
3- Create Meeting
4- Add from LDAP server all participants
5- Press OK
6- Ask for sending email : press yes send email

==> in notification kmail2 show error that the address of the sender is not accepted ?!

Open form outbox folder the not sent email and using button send to send, the emial is sent !

Actual Results:  
Get error when sending invitation

Expected Results:  
Invitation must be correctly sent
Comment 1 Peer Frank 2011-12-13 13:28:00 UTC
similar problem when accepting an invitation and trying to send the confirmation message:

kmail2 error message:

Failed to transport message. Message sending failed since the following recipients were rejected by the server: Joe Smith <joe.smith@there.com> (The server responded: "5.1.3 Bad recipient address syntax")

And nothing is sent. recipient address is definetly correct (not the dummy address above of course)
Comment 2 Laurent Montel 2011-12-20 11:10:12 UTC
I confirm it
Comment 3 Laurent Montel 2011-12-20 12:15:35 UTC
Git commit fe29e4a51084cbff3168f1d27a6b4c40fcd87855 by Montel Laurent.
Committed on 20/12/2011 at 13:15.
Pushed by mlaurent into branch 'master'.

Fix Bug 281927 - Unable de send Invitation using Kmail2/KDE4.7.1

FIXED-IN: 4.8
BUG: 281927

M  +1    -2    calendarsupport/mailclient.cpp

http://commits.kde.org/kdepim/fe29e4a51084cbff3168f1d27a6b4c40fcd87855
Comment 4 Laurent Montel 2011-12-20 12:16:16 UTC
Git commit dbdf5e55f3354e2839e6c949b1785ab95a0cca59 by Montel Laurent.
Committed on 20/12/2011 at 13:15.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 281927 - Unable de send Invitation using Kmail2/KDE4.7.1

FIXED-IN: 4.8
BUG: 281927
(cherry picked from commit fe29e4a51084cbff3168f1d27a6b4c40fcd87855)

M  +1    -2    calendarsupport/mailclient.cpp

http://commits.kde.org/kdepim/dbdf5e55f3354e2839e6c949b1785ab95a0cca59