Fix Bug 281927 - Unable de send Invitation using Kmail2/KDE4.7.1

FIXED-IN: 4.8
BUG: 281927